отремонтировал вывод goods в странице аренды оборудования в соответствии с пагинацией

--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -30,6 +30,11 @@
 			</div>
 		</div>
 	</form>
+	<div class="pagination-container">
+		<button id="prevPageBtn" class="btn btn-primary">Précédent</button>
+		<span id="pageInfo"></span>
+		<button id="nextPageBtn" class="btn btn-primary">Suivant</button>
+	</div>
 	<div class="custom-jumbotron mt-4">
 		<p class="lead">Vous n'avez pas trouvé ce dont vous avez besoin ?</p>
 		<hr class="my-4">
