--- a/germax-frontend/src/templates/components/content-page-orders/index.html
+++ b/germax-frontend/src/templates/components/content-page-orders/index.html
@@ -13,6 +13,34 @@
 	<!-- Заголовок список заказов для менеджера -->
 	<div id="listOrdersTitle"></div>
 
+	<div id="equipmentByModels">Liste des équipements par modèles</div>
+	<form class="jumbotron mt-4">
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" id="model-search" placeholder="Rechercher par modèle">
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-3">
+					<div class="list-group" id="type-filter">
+						<a class="list-group-item list-group-item-action active" data-type="all">All</a>
+						<a class="list-group-item list-group-item-action" data-type="laptop">Ordinateurs portables</a>
+						<a class="list-group-item list-group-item-action" data-type="сomputer_monitor">Ecrans d'ordinateurs</a>
+						<a class="list-group-item list-group-item-action" data-type="smartphone">Smartphones</a>
+						<a class="list-group-item list-group-item-action" data-type="accessory">Accessoires</a>
+						<a class="list-group-item list-group-item-action" data-type="tablet">Tablettes</a>
+						<a class="list-group-item list-group-item-action" data-type="VR_headset">Casque VR</a>
+					</div>
+				</div>
+				<div class="col-md-9">
+					<div class="equipment-list" id="equipment-list">
+						<!-- Сюда будут загружаться результаты -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+
+
 	<!-- Modal for Adding Equipment -->
 	<div class="modal fade" id="addEquipmentModal" tabindex="-1" aria-labelledby="addEquipmentModalLabel"
 		aria-hidden="true">
@@ -101,7 +129,6 @@
 		</div>
 	</div>
 
-	<h1>Liste des équipements par modèles</h1>
 	<div class="table-responsive">
 		<table class="table" id="goodsTable">
 			<thead>
@@ -140,10 +167,10 @@
 		</table>
 	</div>
 	<div class="pagination-container">
-    <button id="prevPageBtn" class="btn btn-primary">Précédent</button>
-    <span id="pageInfo"></span>
-    <button id="nextPageBtn" class="btn btn-primary">Suivant</button>
-</div>
+		<button id="prevPageBtn" class="btn btn-primary">Précédent</button>
+		<span id="pageInfo"></span>
+		<button id="nextPageBtn" class="btn btn-primary">Suivant</button>
+	</div>
 
 	<!-- Modal for Checking Availability -->
 	<div class="modal fade" id="availabilityModal" tabindex="-1" aria-labelledby="availabilityModalLabel"
@@ -191,14 +218,14 @@
 
 <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
-			<div class="modal-content">
-					<div class="modal-header">
-							<h5 class="modal-title" id="editModalLabel">Modifier les données</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-							<!-- Форма для редактирования будет динамически добавлена сюда -->
-					</div>
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="editModalLabel">Modifier les données</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
+			<div class="modal-body">
+				<!-- Форма для редактирования будет динамически добавлена сюда -->
+			</div>
+		</div>
 	</div>
 </div>
