--- a/germax-frontend/src/templates/components/content-page-dashboard/index.css
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.css
@@ -436,3 +436,8 @@ header {
 	background-color: var(--secondary-color);
 	border-color: var(--secondary-color);
 }
+
+.dropdown-item:hover {
+	background-color: var(--primary-color);
+	color: white; /* Optional: to make sure the text color contrasts well with the background */
+}
