--- a/germax-frontend/src/templates/components/content-page-client-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.css
@@ -10,7 +10,8 @@
 	--color-accent: #AFD275;
 }
 
-body, html {
+body,
+html {
 	height: 100%;
 	margin: 0;
 }
@@ -30,30 +31,6 @@ header {
 	background-color: var(--color-primary);
 	color: white;
 	padding: 1rem;
-}
-
-header .navbar-brand {
-	font-weight: bold;
-	color: white;
-}
-
-/* Стили для футера */
-footer {
-	background-color: var(--color-quaternary);
-	color: white;
-	padding: 1rem 0;
-	position: fixed;
-	width: 100%;
-	bottom: 0;
-}
-
-footer a {
-	color: var(--color-accent);
-	text-decoration: none;
-}
-
-footer a:hover {
-	text-decoration: underline;
 }
 
 .container h1 {
@@ -98,4 +75,27 @@ footer a:hover {
 
 .rental-card h5 {
 	color: var(--color-primary);
+}
+
+/* Стили для вкладок навигации */
+.nav-tabs .nav-item .nav-link {
+	color: var(--color-quaternary);
+	background-color: var(--color-secondary);
+	border: 1px solid var(--color-tertiary);
+	border-radius: 0.375rem 0.375rem 0 0;
+	margin-right: 5px; /* Добавить немного пространства между вкладками */
+	padding: 0.5rem 1rem; /* Регулировка отступов для вкладок */
+	transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav-tabs .nav-item .nav-link.active {
+	color: white;
+	background-color: var(--color-primary);
+	border-color: var(--color-primary);
+}
+
+.nav-tabs .nav-item .nav-link:hover {
+	color: white;
+	background-color: var(--color-accent);
+	border-color: var(--color-primary);
 }
