--- a/germax-frontend/src/templates/components/content-page-client-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.html
@@ -170,3 +170,23 @@
 		</div>
 	</div>
 </div>
+
+<!-- Block User Confirmation Modal -->
+<div class="modal fade" id="blockUserModal" tabindex="-1" aria-labelledby="blockUserModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+			<div class="modal-content">
+					<div class="modal-header">
+							<h5 class="modal-title" id="blockUserModalLabel">Blocage de l'utilisateur</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+							Êtes-vous sûr de vouloir bloquer cet utilisateur ?
+					</div>
+					<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+							<button type="button" class="btn btn-danger" id="confirmBlockUser">Oui</button>
+					</div>
+			</div>
+	</div>
+</div>
+
