реализовал блокировку пользователя

--- a/germax-frontend/src/templates/components/content-auth/index.html
+++ b/germax-frontend/src/templates/components/content-auth/index.html
@@ -89,3 +89,21 @@
 		<!-- Content for right block goes here -->
 	</div>
 </section>
+
+<div class="modal fade" id="accessDeniedModal" tabindex="-1" aria-labelledby="accessDeniedModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+					<div class="modal-header">
+							<h5 class="modal-title" id="accessDeniedModalLabel">Accès refusé</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+							<p>Nous regrettons de vous informer que vos droits d'accès ont été révoqués. Pour plus d'informations et explications, veuillez contacter le numéro suivant :</p>
+							<p><strong>Téléphone:</strong> +33 1 23 45 67 89</p>
+					</div>
+					<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+					</div>
+			</div>
+	</div>
+</div>
