пагинация и сортировка для page-order-new-equipment поиск по пользователю для page-booking-management

--- a/germax-frontend/src/templates/components/content-page-client-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.html
@@ -29,8 +29,8 @@
 				<div class="input-group-prepend">
 					<!-- <span class="input-group-text" id="basic-addon1"><img src="search-icon.svg" alt=""></span> -->
 				</div>
-				<input type="text" class="form-control" placeholder="Recherche de clients..." aria-label="Поиск"
-					aria-describedby="basic-addon1">
+				<input type="text" class="form-control" id="userSearchInput" placeholder="Recherche de clients..." aria-label="Recherche par clients"
+    aria-describedby="basic-addon1">
 			</div>
 		</div>
 	</div>
