--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -178,6 +178,12 @@
 		</table>
 	</div>
 
+	<div id="paginationControls">
+		<button id="prevPageBtn" class="btn btn-secondary">Previous</button>
+		<span id="pageInfo"></span>
+		<button id="nextPageBtn" class="btn btn-secondary">Next</button>
+	</div>
+
 	<!-- Modal for Checking Availability -->
 	<div class="modal fade" id="availabilityModal" tabindex="-1" aria-labelledby="availabilityModalLabel"
 		aria-hidden="true">
