--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.css
@@ -184,3 +184,24 @@ h1.mb-3 {
 .back-arrow:hover i {
 	transform: translateX(-5px);
 }
+
+#paginationContainer button {
+	margin: 0 5px;
+	padding: 10px 20px;
+	font-size: 1rem;
+	border: none;
+	border-radius: 5px;
+	background-color: var(--primary-color);
+	color: white;
+	transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+#paginationContainer button:disabled {
+	background-color: var(--tertiary-color);
+	color: var(--secondary-color);
+	cursor: not-allowed;
+}
+
+#paginationContainer button:hover:not(:disabled) {
+	background-color: var(--accent-color);
+}
