везде добавлены кнопка назад и кнопка выхода из акаунта

--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
-	<h1 class="mb-3">Gestion des réservations</h1>
 	<div id="backArrowContainer"></div>
+	<h1 class="mb-3">Gestion des réservations</h1>
 	<div class="nav nav-tabs" id="equipmentTabs" role="tablist">
 		<a class="nav-link active" id="active-booking-tab" data-bs-toggle="tab" href="#requestBookingsManagement" role="tab"
 			aria-controls="requestBookingsManagement" aria-selected="true">Gestion des demandes de réservations </a>
@@ -165,3 +165,4 @@
 		<span id="pageInfo"></span>
 		<button id="nextPageBtn" class="btn btn-secondary">Next</button>
 	</div>
+</div>
