--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -51,14 +51,14 @@
 	<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 					<div class="modal-header">
-							<h5 class="modal-title" id="supportModalContactLabel">Pour la moindre question ou problème écrivez votre message au manager</h5>
+							<h5 class="modal-title" id="supportModalContactLabel">Pour la moindre question ou problème écrivez votre message à l'admin</h5>
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
 					<div class="modal-body">
 							<div class="contact-info">
 									<p><strong>Téléphone:</strong> +33 1 23 45 67 89</p>
 									<p><strong>Heures de travail:</strong> Lundi - Vendredi, 9:00 - 18:00</p>
-									<p><strong>Email:</strong> <a href="mailto:manager@exemple.com">manager@exemple.com</a></p>
+									<p><strong>Email:</strong> <a href="mailto:admin@exemple.com">admin@exemple.com</a></p>
 							</div>
 					</div>
 					<div class="modal-footer">
