--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.css
@@ -142,6 +142,7 @@ h1.mb-3 {
 	color: white;
 }
 
+/* retour en arrière */
 .btn-back {
 	color: #7E685A !important;
 	margin-top: 75px;
@@ -150,39 +151,6 @@ h1.mb-3 {
 	position: absolute;
 	left: 15px;
 	top: 90px;
-}
-
-#backArrowContainer {
-	position: relative;
-	top: 20px;
-	left: 20px;
-	z-index: 1000;
-}
-
-.back-arrow {
-	font-size: 30px;
-	color: var(--primary-color);
-	text-decoration: none;
-	display: flex;
-	align-items: center;
-	transition: color 0.3s ease;
-	background-color: var(--secondary-color);
-	padding: 10px;
-	border-radius: 5px;
-}
-
-.back-arrow:hover {
-	color: var(--accent-color);
-	text-decoration: underline;
-}
-
-.back-arrow i {
-	margin-right: 5px;
-	transition: transform 0.3s ease;
-}
-
-.back-arrow:hover i {
-	transform: translateX(-5px);
 }
 
 #paginationContainer button {
@@ -204,4 +172,39 @@ h1.mb-3 {
 
 #paginationContainer button:hover:not(:disabled) {
 	background-color: var(--accent-color);
+}
+
+/* retour en arrière */
+#backArrowContainer {
+	position: fixed;
+	top: 40px; /* Отрегулируйте это значение по необходимости */
+	left: 10px; /* Почти прижата к левому краю страницы */
+	z-index: 1000;
+}
+
+.back-arrow {
+	font-size: 20px; /* Сделаем кнопку жирнее */
+	color: var(--primary-color);
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	padding: 10px;
+	border-radius: 5px;
+	opacity: 0.3; /* Полупрозрачная кнопка */
+}
+
+.back-arrow:hover {
+	color: var(--accent-color);
+	text-decoration: underline;
+	opacity: 1; /* Увеличим непрозрачность при наведении */
+}
+
+.back-arrow i {
+	margin-right: 5px;
+	transition: transform 0.3s ease;
+}
+
+.back-arrow:hover i {
+	transform: translateX(-5px);
 }
