--- a/germax-frontend/src/templates/components/content-page-client-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.css
@@ -99,3 +99,47 @@ header {
 	background-color: var(--color-accent);
 	border-color: var(--color-primary);
 }
+
+/* retour en arrière */
+#backArrowContainer {
+	position: fixed;
+	top: 40px; /* Отрегулируйте это значение по необходимости */
+	left: 10px; /* Почти прижата к левому краю страницы */
+	z-index: 1000;
+}
+
+.back-arrow {
+	font-size: 20px; /* Сделаем кнопку жирнее */
+	color: var(--color-primary);
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	padding: 10px;
+	border-radius: 5px;
+	opacity: 0.3; /* Полупрозрачная кнопка */
+}
+
+.back-arrow:hover {
+	color: var(--color-accent);
+	text-decoration: underline;
+	opacity: 1; /* Увеличим непрозрачность при наведении */
+}
+
+.back-arrow i {
+	margin-right: 5px;
+	transition: transform 0.3s ease;
+}
+
+.back-arrow:hover i {
+	transform: translateX(-5px);
+}
+
+.navbar .btn-auth {
+	background-color: var(--color-primary);
+	color: white;
+}
+
+.navbar .btn-auth:hover {
+	background-color: var(--color-accent);
+}
