--- a/germax-frontend/src/templates/components/content-page-client-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.html
@@ -1,4 +1,5 @@
 <div class="container pt-3 pb-1">
+	<div id="backArrowContainer"></div>
 	<!-- Main Header -->
 	<div class="row pb-2">
 		<div class="col">
