--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.css
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.css
@@ -1,4 +1,5 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
 
 .equipment-list {
 	display: flex;
@@ -176,4 +177,49 @@
 .pagination-container #pageInfo {
 	font-size: 16px;
 	color: var(--text-color);
+}
+
+/* retour en arrière */
+#backArrowContainer {
+	position: fixed;
+	top: 71px; /* Отрегулируйте это значение по необходимости */
+	left: 10px; /* Почти прижата к левому краю страницы */
+	z-index: 1000;
+}
+
+.back-arrow {
+	font-size: 20px; /* Сделаем кнопку жирнее */
+	color: var(--primary-color);
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	padding: 10px;
+	border-radius: 5px;
+	opacity: 0.3; /* Полупрозрачная кнопка */
+}
+
+.back-arrow:hover {
+	color: var(--accent-color);
+	text-decoration: underline;
+	opacity: 1; /* Увеличим непрозрачность при наведении */
+}
+
+.back-arrow i {
+	margin-right: 5px;
+	transition: transform 0.3s ease;
+}
+
+.back-arrow:hover i {
+	transform: translateX(-5px);
+}
+
+
+.navbar .btn-auth {
+	background-color: var(--primary-color);
+	color: white;
+}
+
+.navbar .btn-auth:hover {
+	background-color: var(--accent-color);
 }
