--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -1,4 +1,5 @@
 <div class="container mt-5">
+	<div id="backArrowContainer"></div>
 	<h5 class="custom-title" id="fullScreenModalLabel">Louez votre équipement</h5>
 	<form class="jumbotron mt-4">
 		<div class="input-group mb-3">
