--- a/germax-frontend/src/templates/components/content-page-orders/index.html
+++ b/germax-frontend/src/templates/components/content-page-orders/index.html
@@ -1,5 +1,6 @@
 <div class="tab-pane fade show active" id="commandes-equipement" role="tabpanel"
 	aria-labelledby="commandes-equipement-link">
+	<div id="backArrowContainer"></div>
 
 	<!-- Заголовок Добавления оборудования для менеджера -->
 	<div id="titleAddingOrders"></div>
