--- a/germax-frontend/src/templates/components/content-page-orders/index.html
+++ b/germax-frontend/src/templates/components/content-page-orders/index.html
@@ -283,3 +283,21 @@
 			</div>
 	</div>
 </div>
+
+<!-- Units Modal -->
+<div class="modal fade" id="unitsModal" tabindex="-1" aria-labelledby="unitsModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="unitsModalLabel">Détails de l'équipement</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Контент для количества единиц оборудования будет сгенерирован здесь -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
