--- a/germax-frontend/src/templates/components/content-auth/index.html
+++ b/germax-frontend/src/templates/components/content-auth/index.html
@@ -107,3 +107,20 @@
 			</div>
 	</div>
 </div>
+
+<div class="modal fade" id="authorizationPendingModal" tabindex="-1" aria-labelledby="authorizationPendingModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="authorizationPendingModalLabel">Demande en attente</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Votre demande est en cours de traitement. Veuillez patienter jusqu'à ce que votre demande soit examinée par un gestionnaire.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
