gestion du refus de la location

--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.css
@@ -210,16 +210,16 @@ h1.mb-3 {
 }
 
 #rentalManagementModal .modal-footer .btn-danger {
-	background-color: var(--tertiary-color);
+	background-color: var(--primary-color);
 	color: white;
 }
 
 #rentalManagementModal .modal-footer .btn-success {
-	background-color: var(--primary-color);
+	background-color: var(--accent-color);
 	color: white;
 }
 
 #rentalManagementModal .modal-footer .btn-danger:hover,
 #rentalManagementModal .modal-footer .btn-success:hover {
-	background-color: var(--accent-color);
+	background-color: var(--secondary-color);
 }
