--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.html
@@ -186,3 +186,23 @@
     </div>
   </div>
 </div>
+
+<!-- Modal для возврата оборудования -->
+<div class="modal fade" id="reportReturnModal" tabindex="-1" aria-labelledby="reportReturnModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+			<div class="modal-content">
+					<div class="modal-header">
+							<h5 class="modal-title" id="reportReturnModalLabel">Signaler le retour de l'équipement</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+							Êtes-vous sûr de vouloir signaler le retour de cet équipement ?
+					</div>
+					<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+							<button type="button" class="btn btn-primary" id="confirmReportReturnButton">Confirmer</button>
+					</div>
+			</div>
+	</div>
+</div>
+
