--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.css
@@ -37,12 +37,12 @@ h1.mb-3 {
 }
 
 .btn-primary {
-	background-color: var(--primary-color);
+	background-color: var(--accent-color);
 	border: none;
 }
 
 .btn-primary:hover {
-	background-color: var(--accent-color);
+	background-color: var(--quaternary-color);
 }
 
 /* Стили для таблицы */
@@ -109,13 +109,13 @@ h1.mb-3 {
 }
 
 .modal-footer .btn-primary {
-	background-color: var(--primary-color);
+	background-color: var(--accent-color);
 	color: white;
 }
 
 .modal-footer .btn-secondary:hover,
 .modal-footer .btn-primary:hover {
-	background-color: var(--accent-color);
+	background-color: var(--quaternary-color);
 }
 
 /* Стили для кнопок в выпадающих меню */
