modification de l'affichage des status des pages order-new-equipment et loans.js

--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -125,7 +125,7 @@
 					</div>
 					<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-							<button type="submit" class="btn btn-primary btn-lg" form="notFoundRequestForm">Envoyer la requête</button>
+							<button type="submit" class="btn btn-primary" form="notFoundRequestForm">Envoyer la requête</button>
 					</div>
 			</div>
 	</div>
